# RailVision

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
images/annotations/: out73.json  out74.json  out75.json  out76.json  out77.json  out78.json  out79.json  out80.json  out81.json
models/sign_yolov8_best_saved_model/: metadata.yaml
requirements/: base.txt  dev.txt  jetson.txt
scripts/: convert_tflite.py  convert_xml_yolo.py  video_inference.py
src/config/: settings.py
src/models/: color_detector.py  ocr_processor.py  yolo_detector.py
src/training/: train_traffic_sign.py
src/utils/: image_processing.py  video_utils.py
tests/: conftest.py  test_basic.py  test_color_detector.py  test_image_processing.py  test_video_utils.py  test_yolo_detector.py
