[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "demo-ausrail-2023"
version = "0.1.0"
description = "Railway traffic sign and signal detection system for Jetson devices"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "DemoAusrail Team" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]

dependencies = [
    "ultralytics>=8.0.0",
    "opencv-python>=4.8.0",
    "numpy>=1.22.2",
    "matplotlib>=3.3.0",
    "pyyaml>=5.3.1",
    "requests>=2.23.0",
    "scipy>=1.4.1",
    "tqdm>=4.64.0",
    "pandas>=1.1.4",
    "seaborn>=0.11.0",
    "psutil",
    "py-cpuinfo",
    "thop>=0.1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "flake8>=5.0.0",
    "mypy>=0.991",
    "ruff>=0.1.0",  # Modern Python linter
]

ocr = [
    "paddleocr>=2.6.0",
]

jetson = []  # Empty as Jetson packages are installed manually

[project.scripts]
railway-detect = "scripts.video_inference:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=src --cov-report=html --cov-report=term"

[tool.ruff]
line-length = 88
target-version = "py38"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = []

[tool.ruff.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true